[gd_scene load_steps=10 format=3 uid="uid://dau4hsak6vsv"]

[ext_resource type="Script" uid="uid://cfaqekgvlgru4" path="res://scripts/Main.gd" id="1_rvslj"]
[ext_resource type="PackedScene" uid="uid://b1ald783aym4l" path="res://scenes/Player.tscn" id="2_0bbpv"]
[ext_resource type="Texture2D" uid="uid://bxrgwt5vx0qp8" path="res://assets/lives/heart_full.png" id="3_0bbpv"]
[ext_resource type="PackedScene" uid="uid://bc7yjjjbhkcy1" path="res://scenes/GameManager.tscn" id="3_nxtc6"]
[ext_resource type="Script" uid="uid://vn4xgx7u0281" path="res://scripts/UIManager.gd" id="3_rarhs"]
[ext_resource type="Texture2D" uid="uid://c4mg6745puosb" path="res://assets/lives/heart_empty.png" id="5_vcsgt"]
[ext_resource type="FontFile" uid="uid://b463klon7e8k5" path="res://assets/fonts/game_over.ttf" id="6_c01mt"]

[sub_resource type="LabelSettings" id="LabelSettings_vcsgt"]
line_spacing = 2.0
font = ExtResource("6_c01mt")
font_size = 400
font_color = Color(0.776471, 0.0862745, 0.411765, 1)
outline_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_c01mt"]
line_spacing = 1.0
font = ExtResource("6_c01mt")
font_size = 88
font_color = Color(0.298039, 0.266667, 0.25098, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_rvslj")

[node name="Player" parent="." instance=ExtResource("2_0bbpv")]

[node name="GameManager" parent="." instance=ExtResource("3_nxtc6")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_rarhs")
full_heart_texture = ExtResource("3_0bbpv")
empty_heart_texture = ExtResource("5_vcsgt")

[node name="HP" type="HBoxContainer" parent="UI"]
offset_left = 42.0
offset_top = 42.0
offset_right = 141.0
offset_bottom = 77.0
scale = Vector2(1.25, 1.25)

[node name="Heart1" type="TextureRect" parent="UI/HP"]
layout_mode = 2
stretch_mode = 2

[node name="Heart2" type="TextureRect" parent="UI/HP"]
layout_mode = 2
stretch_mode = 2

[node name="Heart3" type="TextureRect" parent="UI/HP"]
layout_mode = 2
stretch_mode = 2

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME
OVER"
label_settings = SubResource("LabelSettings_vcsgt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 518.0
offset_top = 42.0
offset_right = -42.0
offset_bottom = -1173.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_c01mt")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
